[package]
name = "vecmath-cli"
version = "0.1.0"
edition = "2021"
authors = ["VecMath Team"]
description = "High-performance vector math CLI tool for scientific computing and ML"

[features]
default = ["f64"]
f32 = []
f64 = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nalgebra = { version = "0.32", features = ["serde"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
thiserror = "1.0"
anyhow = "1.0"
num-traits = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
